修改代码，资源名称尽量以qrcode_约束，包名更改为com.qrcode  便于以后复用，增加状态栏适配代码

--- a/qrcode/src/main/res/values/colors.xml
+++ b/qrcode/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <!--<color name="result_minor_text">#ffc0c0c0</color>-->
     <!--<color name="qrcode_result_points">#c000ff00</color>-->
     <!--<color name="system_bar_color">#fed952</color>-->
+    <color name="qrcode_we_chat_black">#232323</color>
+
+
+
 </resources>
