--- a/qrcode/src/main/res/values/ids.xml
+++ b/qrcode/src/main/res/values/ids.xml
@@ -13,7 +13,7 @@
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- QR_Code -->
     <item type="id" name="qrcode_auto_focus" />
