--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -7,47 +7,51 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.guava.MainActivity">
 
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/app_name"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/txt_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"/>
+        android:layout_below="@+id/toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_content"
         android:orientation="vertical">
+
         <Button
             android:id="@+id/btn_qrcode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginTop="10dp"
             android:text="开始扫码" />
 
+
         <Button
-            android:id="@+id/btn_statusbar"
+            android:id="@+id/btn_material_design"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:text="状态栏" />
+            android:layout_marginTop="10dp"
+            android:text="MaterialDesign" />
     </LinearLayout>
 
 
