--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -52,6 +52,15 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="10dp"
             android:text="MaterialDesign" />
+
+        <Button
+            android:id="@+id/btn_hencoder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="10dp"
+            android:text="hencoder练习" />
     </LinearLayout>
 
 
