--- a/hencoder/src/main/res/layout/hencoder_main_layout.xml
+++ b/hencoder/src/main/res/layout/hencoder_main_layout.xml
@@ -3,11 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#5c9ed9">
 
 
     <com.demo.hencoder.AvatarView
         android:layout_width="200dp"
-        android:layout_height="200dp"/>
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
