--- a/materialdesign/src/main/res/layout/activity_material_design_main.xml
+++ b/materialdesign/src/main/res/layout/activity_material_design_main.xml
@@ -41,4 +41,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_behavior"
         tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/custom_floating_button_behavior"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="自定义FloatingActionButtonBehavior"
+        android:textAllCaps="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custom_bottom_sheet"
+        tools:ignore="HardcodedText" />
 </android.support.constraint.ConstraintLayout>
