--- a/hencoder/src/main/res/layout/hencoder_main_layout.xml
+++ b/hencoder/src/main/res/layout/hencoder_main_layout.xml
@@ -7,9 +7,9 @@
     android:background="#5c9ed9">
 
 
-    <com.demo.hencoder.AvatarView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <com.demo.hencoder.SportsView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
