添加 treelist结构列表的显示以及带有checkbox列表展示

--- a/widget/src/main/res/layout/activity_recycler_main.xml
+++ b/widget/src/main/res/layout/activity_recycler_main.xml
@@ -8,4 +8,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="自定义LayoutManager 01"/>
+
+    <Button
+        android:id="@+id/btn_tree"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="组织树 01"/>
+
+
+    <Button
+        android:id="@+id/btn_tree_select"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="checkbox组织树 01"/>
 </LinearLayout>
